--- a/Final Project/ClientApp/src/app/park-detail/park-detail.component.html
+++ b/Final Project/ClientApp/src/app/park-detail/park-detail.component.html
@@ -1,8 +1,7 @@
 <p>
   park-detail works!
 </p>
-<div>
-  <p>
-    {{Park.data.fullName}}
-  </p>
+<div *ngFor="let p of parks">
+<p>{{p.data.fullName}}</p>
+
 </div>
