changed component to 'park-list'

--- a/Final Project/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Final Project/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -32,7 +32,7 @@
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/park-detail']">Park Details</a>
+            <a class="nav-link text-dark" [routerLink]="['/park-list']">Park List</a>
           </li>
         </ul>
       </div>
