adding rough landing page

--- a/Final Project/ClientApp/src/app/home/home.component.html
+++ b/Final Project/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,75 @@
-<h1>Hello, world!</h1>
+<div>
+  <h2 id="HomePageHeader">The National Parks Exploration Page</h2>
+</div>
+
+<body>
+
+<h4 class="adventure">Your next adventure starts here.</h4>
+  <p>The United States is home to hundreds of National Parks and park units. 
+      Although there are technically 63 National Parks within the United States,
+      hundreds of other 'units' (e.g., Battlefields, Lakeshores, Memorials and Military Parks)
+      encompass the breadth of our American conservation efforts.
+  </p>
+  <p class="quote">"The mountains are calling and I must go." -- John Muir</p>
+
+<h5>What is a 'National Park?'</h5>
+<div>
+  <div style="float:right">
+      <img src="../assets/JohnMuir.jpg" width="20%" height="auto"/>
+  </div>
+</div>
+<div>
+  <p>National Parks are designed to preserve natural and cultural resources for enjoyment, education and inspiration. 
+      These differ from National Forests, which exist to sustain the productivity of the Nation’s forests and grasslands 
+      to meet the needs of present and future generations.</p>
+</div>   
+
+
+<h5>History: A Timeline</h5>
+  <p>* 1864: President Abraham Lincoln sets aside Yosemite Valley and the Mariposa Grove of Giant Sequoias. 
+      This was the first time the federal government protected land because of its natural beauty.</p>
+  <p>* 1872: Yellowstone National Park is established as the first National Park.</p>
+  <p>* 1906: President Theodore Roosevelt establishes Mesa Verde National Park, 
+      the first time a national park was created to conserve man-made objects and American history.</p>
+  <p>* 1916: President Woodrow Wilson signs the 'Organic Law' to create a National Park Service. 
+      This bureau was tasked to protect the 35 existing national parks, as well as future ones.</p>
+  <p>* 1933: The management of over fifty national monuments and military sites -- including Gettysburg National Military Park --  
+      are transferred from the War and Agriculture Departments to the National Park Service.
+      In the same year, President Franklin D. Roosevelt's New Deal program established the Cilvilian Conservation Corps,
+      recruiting the unemployed to plant billions of trees, fight wildfires and build roads and trails. </p>
+<div>
+  <div style="float:right">
+      <img src="../assets/NationalMall.jpg" width="20%" height="auto"/>
+  </div>
+  <p>Added to the National Register of Historic Places in 1966, The National Mall is a landscaped park 
+  within the National Mall and Memorial Parks, an official unit of the United States National Park System</p>
+</div>
+
+
+  <p>* 2016: A century after the National Park Service was created, it is now responsible for more than 400 park locations 
+      in all 50 states, the District of Columbia, American Samoa, Guam, Puerto Rico, Saipan and the Virgin Islands.
+      One of the newest additions is Stonewall National Monument -- the first national monument that honors the history 
+      of the Lesbian, Gay, Bisexual and Transgender community.</p>
+
+<h5 class="info">Over 84 million acres for conservation and recreation!</h5>
+  <p>The National Park Service preserves unimpaired the natural and cultural resources and values of the National Park System 
+      for the enjoyment, education, and inspiration of this and future generations. The Park Service cooperates with partners 
+      to extend the benefits of natural and cultural resource conservation and outdoor recreation throughout this country and the world.</p>
+
+
+</body>
+
+
+
+
+
+
+
+
+
+
+
+<!-- <h1>Hello, world!</h1>
 <p>Welcome to your new single-page application, built with:</p>
 <ul>
   <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
@@ -11,4 +82,4 @@
   <li><strong>Angular CLI integration</strong>. In development mode, there's no need to run <code>ng serve</code>. It runs in the background automatically, so your client-side resources are dynamically built on demand and the page refreshes when you modify any file.</li>
   <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
 </ul>
-<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
+<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p> -->
