--- a/Final Project/ClientApp/src/styles.css
+++ b/Final Project/ClientApp/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Provide sufficient contrast against white background */
-a {
+/* a {
   color: #0366d6;
 }
 
@@ -13,4 +13,48 @@ code {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+} */
+
+#HomePageHeader {
+  font-family: 'comic-sans';
+  font-weight: bold;
+  text-align: center;
+  padding: 20px;
+  border: 5px solid black;
+  margin-top: 0px;
+  background-color: gray;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  background-image: url('/assets/BigBend.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: lightblue;
+  text-align: left;
+  margin: auto;
+  padding: 15%;
+}
+
+h4 {
+  color: rgb(73, 67, 67);
+  background-color: #afb0c4;
+  border-radius: 10px;
+  text-align: left;
+  padding: 6px;
+}
+
+h5 {
+  color: rgb(73, 67, 67);
+  background-color: #afb0c4;
+  border-radius: 10px;
+  padding: 6px;
+}
+
+p {
+  color: rgb(73, 67, 67);
+  background-color: #cbceeb;
+  border-radius: 10px;
+  padding: 6px;
 }
