Added search function

--- a/Final Project/ClientApp/src/app/searchpark/searchpark.component.html
+++ b/Final Project/ClientApp/src/app/searchpark/searchpark.component.html
@@ -1,1 +1,7 @@
-<p>searchpark works!</p>
+<h2>Search a park</h2>
+
+
+<input type="text" id="parkSearch" />
+
+<button (click)="SearchPark()">Search</button>
+
