adding improved search function that sets length to 0

--- a/Final Project/ClientApp/src/app/home/home.component.html
+++ b/Final Project/ClientApp/src/app/home/home.component.html
@@ -12,13 +12,12 @@
   </p>
 </div>
 
-<div>
-  <div >
-      <img src="../assets/JohnMuir.jpg" width="310" height="400" class="center"/>
-  </div>
+<div class="img">
+  <img src="../assets/JohnMuir.jpg" width="auto" height="400" />
+  <p class="quote">"The mountains are calling and I must go."</p>
+  <p class="quote">-- John Muir</p>
 </div>
-<br>
-<p class="quote">"The mountains are calling and I must go." -- John Muir</p>
+
 
 <br>
 <h3 class="adventure">What is a 'National Park?'</h3>
