--- a/Final Project/ClientApp/src/styles.css
+++ b/Final Project/ClientApp/src/styles.css
@@ -25,6 +25,15 @@ code {
   background-color: gray;
 }
 
+.img {
+  background-color: #cbceeb;
+  border-radius: 10px;
+  padding: 6px;
+  width: fit-content;
+  margin: auto;
+  display: block;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -41,7 +50,7 @@ h3 {
   color: rgb(73, 67, 67);
   background-color: #afb0c4;
   border-radius: 10px;
-  text-align: left;
+  text-align: center;
   padding: 6px;
   position: relative;
 }
@@ -74,11 +83,13 @@ p {
   font-size: 14px;
   background-color: #cbceeb;
   border-radius: 10px;
-  padding: 6px;
+  padding: 0px;
+  width: fit-content;
 }
 
 img {
   border: 5px #cbceeb;
+  width: fit-content;
 }
 
 .center {
@@ -112,7 +123,7 @@ body {
   font-size: 22px;
   font-weight: bold;
   width: fit-content;
-
+  text-align: start;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -178,6 +189,7 @@ body {
   border: medium solid white;
   border-width: 10px 0 10px 10px;
   border-color: transparent transparent transparent white;
+
 }
 
 /* Add arrows to the right container (pointing left) */
