--- a/Final Project/ClientApp/src/app/park-details/park-details.component.html
+++ b/Final Project/ClientApp/src/app/park-details/park-details.component.html
@@ -5,15 +5,12 @@
   <p><a href="{{singlePark.url}}">{{singlePark.name}} Official Website</a></p>
 </div>
 <div>
-  <img src="{{singlePark.images[0].url}}" width="400" height="auto"/>
+  <img class="img" src="{{singlePark.images[0].url}}" height="400px" width="auto"/>
 </div>
 <div>
   <p>{{singlePark.description}}</p>
 </div>
-<div>
-  <h4>Weather</h4>
-  <p>{{singlePark.weatherInfo}}</p>
-</div>
+
 <div>
   <p>Entrance fees:</p>
   
