--- a/Final Project/ClientApp/src/app/searchpark/searchpark.component.html
+++ b/Final Project/ClientApp/src/app/searchpark/searchpark.component.html
@@ -8,5 +8,7 @@
 <div *ngIf="searchedpark">
   <div *ngFor="let p of searchedpark">
     <p>{{p.fullName}}</p>
+    
+    <app-park-details id="detail{{p.parkCode}}" [parkCode]=p.parkCode></app-park-details>
   </div>
   </div>
