--- a/Final Project/ClientApp/src/styles.css
+++ b/Final Project/ClientApp/src/styles.css
@@ -18,11 +18,12 @@ code {
 #HomePageHeader {
   font-family: 'comic-sans';
   font-weight: bold;
+  font-size: 40px;
   text-align: center;
   padding: 20px;
   border: 5px solid black;
   margin-top: 0px;
-  background-color: gray;
+  background-color: rgb(177, 169, 169);
 }
 
 .img {
@@ -43,16 +44,44 @@ body {
   background-color: lightblue;
   text-align: left;
   margin: auto;
-  padding: 15%;
+  padding-right: 10.5%;
+  padding-left: 10.5%;
+  padding-top: 3%;
 }
 
-h3 {
-  color: rgb(73, 67, 67);
+.sectionheading {
+  font-family: 'comic-sans';
+  font-weight: bold;
+  color: rgb(41, 38, 38);
   background-color: #afb0c4;
   border-radius: 10px;
   text-align: center;
-  padding: 6px;
+  padding: 10px;
   position: relative;
+}
+
+.sectionheadingfit {
+  font-family: 'comic-sans';
+  font-weight: bold;
+  color: rgb(41, 38, 38);
+  background-color: #afb0c4;
+  border-radius: 10px;
+  text-align: center;
+  padding: 10px;
+  position: relative;
+  width: fit-content;
+}
+
+.planningsubsection {
+  color: rgb(73, 67, 67);
+  font-weight: bold;
+  font-size: 19px;
+  background-color: #afb0c4;
+  border-radius: 10px;
+  text-align: left;
+  padding: 6px;
+  width: fit-content;
+  text-align: center;
 }
 
 h4 {
@@ -75,6 +104,19 @@ p {
   background-color: #cbceeb;
   border-radius: 10px;
   padding: 6px;
+}
+
+.tipslist {
+  font-size: 16px;
+  color: rgb(73, 67, 67);
+  background-color: #cbceeb;
+  border-radius: 10px;
+  padding: 6px;
+  width: fit-content;
+}
+
+ul {
+  list-style-image: url('/assets/checkmark.png');
 }
 
 .quote {
@@ -115,7 +157,7 @@ body {
   font-family: Helvetica, sans-serif;
 }
 
-.timelinedate {
+.timelinedateright {
   color: rgb(73, 67, 67);
   background-color: #afb0c4;
   border-radius: 10px;
@@ -123,14 +165,27 @@ body {
   font-size: 22px;
   font-weight: bold;
   width: fit-content;
-  text-align: start;
+  text-align: left;
+}
+
+.timelinedateleft {
+  color: rgb(73, 67, 67);
+  background-color: #afb0c4;
+  border-radius: 10px;
+  padding: 6px;
+  font-size: 22px;
+  font-weight: bold;
+  width: fit-content;
+  text-align: right;
 }
 
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -182,7 +237,7 @@ body {
   content: " ";
   height: 0;
   position: absolute;
-  top: 22px;
+  top: 18px;
   width: 0;
   z-index: 1;
   right: 30px;
@@ -197,7 +252,7 @@ body {
   content: " ";
   height: 0;
   position: absolute;
-  top: 22px;
+  top: 18px;
   width: 0;
   z-index: 1;
   left: 30px;
