added create user component

--- a/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
+++ b/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
@@ -1,1 +1,13 @@
 <p>userprofile works!</p>
+
+<p>If a user is logged in:</p>
+<p>Display user first/last name (welcome message), user details</p>
+<p>Logout button!</p>
+<p>display user park list (using HTML from park list component, but calling the users-parks list to populate</p>
+<p>if park list is empty, link to search or park list components? (two separate links) after the "no parks to show" msg</p>
+
+<p>If a user is not logged in:</p>
+<p>login form (user name and password fields, submit button)</p>
+    <p>If user name and password do not match, display message to try again or add a new user</p>
+<p>Use the "create user" component and hide it on this page, unless the user wants to create a new user</p>    
+<p>If we have time, create an "update user" component as well</p>
