--- a/Final Project/ClientApp/src/app/searchpark/searchpark.component.html
+++ b/Final Project/ClientApp/src/app/searchpark/searchpark.component.html
@@ -7,6 +7,9 @@
 
 <div *ngIf="searchedpark">
   <div *ngFor="let p of searchedpark">
+    <div id="search{{p.parkCode}}" (click)="ExpandDetails(p.parkCode)">
     <p>{{p.fullName}}</p>
+    </div>
+    <app-park-details id="detail{{p.parkCode}}" style="display: none;" [parkCode]=p.parkCode></app-park-details>
   </div>
   </div>
