--- a/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
+++ b/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
@@ -12,3 +12,7 @@
     - have a Create User button that routes the user to the Create User component
 </p>
 
+<h4>Y'all ready for this?</h4>
+<div *ngFor="let user of users">
+    <p>{{user.first_Name}}</p>
+</div>
