--- a/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
+++ b/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
@@ -25,6 +25,21 @@
     </div>
     <div *ngIf="u.isLoggedIn===false">
         <p> Please log in below!</p>
+
         
     </div>
+
 </div>
+<div>
+    <p>User Name:</p>
+    <input type="text" id="username" />
+    <p>Password</p>
+    <input type="password" id="password" />
+    <button (click)="ValidateUser()">Login</button>
+    <!--<div if the method above returns true, then refresh and run this page again 
+    - if false, display a popup message saying that isnt a valid login></div>-->
+</div>
+<div *ngIf="validLogin === false">
+    <p>YOU FOOL!  Wrong password or username!</p>
+</div>
+
