prior to enabling JS debugging in Visual Studio

--- a/Final Project/ClientApp/src/app/park-details/park-details.component.html
+++ b/Final Project/ClientApp/src/app/park-details/park-details.component.html
@@ -1,6 +1,8 @@
 <div>
   <h4>{{singlePark.fullName}}</h4>
+  <div>
   <button (click)="AddParkToUserList(singlePark.parkCode)">Add to List</button>  
+</div>
 </div>
 
 <div>
