--- a/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
+++ b/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
@@ -1,25 +1,13 @@
-<p>if logged in:
-    - user info displayed (check!)
-    - user logout button
-    - if user_parks has data, show list of parks (can we use code from search or park list?)
-    - if no parks, tell user their list is empty, route to search or list
-</p>
-<p>if not logged in:
-    - show form to input user name and password
-    - call user table to confirm if user exists AND if pwd match
-    - if password/user matches, update boolean isLoggedIn on the DB table, flip user screen to above
-    - if user/pwd do not match, notify user to try again.
-    - have a Create User button that routes the user to the Create User component
-</p>
+
 
 <!-- <h4>Y'all ready for this?</h4>
 <div *ngFor="let user of users">
     <p>{{user.first_Name}}</p>
 </div> -->
-<div *ngFor="let u of users">
+<!--<div *ngFor="let u of users">
     <div id="user{{u.id}}" *ngIf="u.isLoggedIn">
     <p>Welcome {{u.first_Name}}!</p>
-        <!--<button (click)="LogOutUser(u.id)" >Log Out</button>-->
+        <button (click)="LogOutUser(u.id)" >Log Out</button>
 
 
     </div>
@@ -29,8 +17,11 @@
         
     </div>
 
-</div>
+</div>-->
 <div>
+    <h4>Please Login Below</h4>
+</div>
+<div id = "loginInputs">
     <p>User Name:</p>
     <input type="text" id="username" />
     <p>Password</p>
@@ -39,7 +30,11 @@
     <!--<div if the method above returns true, then refresh and run this page again 
     - if false, display a popup message saying that isnt a valid login></div>-->
 </div>
+<div>
+    <p>validLogin</p>
+</div>
 <div *ngIf="validLogin === false">
     <p>YOU FOOL!  Wrong password or username!</p>
+    
 </div>
 
