--- a/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
+++ b/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
@@ -28,18 +28,18 @@
         <p>Password</p>
         <input type="password" id="password" />
         <button (click)="ValidateUser()">Login</button>
-    <!--<div if the method above returns true, then refresh and run this page again 
-    - if false, display a popup message saying that isnt a valid login></div>-->
+        <div *ngIf="validLogin===false">
+            <p>Incorrect User Name and Password - please try again.</p>
+            <!--this would need a callback - review later-->
+        </div>
     </div>
 </div>
 <div *ngIf="loggedInUser.id>0">
     <p>Welcome {{loggedInUser.first_Name}}!</p>
 <!--Add User Park table here!-->
+
 <button (click)="LogOutUser(loggedInUser)" >Log Out</button>
-<!--refresh page here too-->
+<app-user-favorites [Id]=loggedInUser.id></app-user-favorites>
 </div>
-<div *ngIf="validLogin === false">
-    <p>YOU FOOL!  Wrong password or username!</p>
-    
-</div>
+
 
