trying to play with css dynamic checkbox

--- a/Final Project/ClientApp/src/app/planningtips/planningtips.component.html
+++ b/Final Project/ClientApp/src/app/planningtips/planningtips.component.html
@@ -21,12 +21,12 @@
                     </ul>
                     <br>
                 <h4 class="planningsubsection">Foodstuff</h4>
-                    <ul >
-                        <li class="tipslist">The lack of restaurants and other ‘food infrastructure’ across National Parks is a blessing and a curse: 
+                    <ul>
+                        <li class="tipslist"><input type="checkbox">The lack of restaurants and other ‘food infrastructure’ across National Parks is a blessing and a curse: 
                         It’s great not having to get pigeon-holed into tourist traps for sustenance; yet, you’ll have to step up your 
                         pre-planning that much more. </li>
                         <br>
-                        <li class="tipslist">The Rocket Mortgage team recommends a couple dozen Clif bars and trail mix to start. 
+                        <li class="tipslist"><input type="checkbox">The Rocket Mortgage team recommends a couple dozen Clif bars and trail mix to start. 
                         Read more about camp cooking <a href="https://www.nps.gov/subjects/camping/cooking-in-camp.htm">here</a>. 
                         You can likely get away with spending less than $100 for the entire week. </li>
                     </ul>
