commiting css code from earlier

--- a/Final Project/ClientApp/src/app/park-details/park-details.component.html
+++ b/Final Project/ClientApp/src/app/park-details/park-details.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h4>{{singlePark.fullName}}<button (click)="AddParkToUserList(singlePark.parkCode)">Add to Favorites</button></h4>
+  <h4>{{singlePark.fullName}}<button class="button" style="float: right;" (click)="AddParkToUserList(singlePark.parkCode)">Add to Favorites</button></h4>
   <div>
   <button (click)="AddParkToUserList(singlePark.parkCode)">Add to List</button>  
 </div>
