adding some css, html Friday morning

--- a/Final Project/ClientApp/src/app/home/home.component.html
+++ b/Final Project/ClientApp/src/app/home/home.component.html
@@ -12,15 +12,29 @@
   </p>
 </div>
 
-<div class="img">
-  <img src="../assets/JohnMuir.jpg" width="auto" height="400" />
-  <p></p>
-  <p class="quote">"The mountains are calling and I must go."</p>
-  <p class="quote"> -- John Muir</p>
+<div class="row">
+  <div class="column">
+    <div class="img" id="wrangell">
+      <img src="../assets/JohnMuir.jpg" width="auto" height="400" />
+        <div>
+        </div>
+      <!-- <p></p>
+      <p class="quote"></p>
+      <p class="quote"> -- John Muir</p> -->
+    </div>
+    <div class="img" id="muir">
+      <img src="../assets/Wrangell.jpg" width="auto" height="400" />
+      <!-- <p></p>
+      <p class="quote">"The mountains are calling and I must go."</p>
+      <p class="quote"> -- John Muir</p> -->
+    </div>
+  </div>
+  <div>
+    <p class="quote" >"The mountains are calling and I must go." -John Muir, 1838-1914.</p>
+  </div>
 </div>
-
-
 <br>
+
 <h3 class="sectionheading">What is a 'National Park?'</h3>
 
 <div>
@@ -68,20 +82,19 @@
 
     <div class="tcontainer right">
       <h5 class="timelinedateright">2016</h5>
-      <p>A century after the National Park Service was created, it is now responsible for more than 400 park locations 
-        in all 50 states, the District of Columbia, American Samoa, Guam, Puerto Rico, Saipan and the Virgin Islands.
-        One of the newest additions is Stonewall National Monument -- the first national monument that honors the history 
-        of the Lesbian, Gay, Bisexual and Transgender community.</p>
+      <p>100 years of the National Park Service! There are now 400 park locations in all 50 states, 
+        the District of Columbia, American Samoa, Guam, Puerto Rico, Saipan and the Virgin Islands.
+        One of the newest additions is Stonewall National Monument, a national monument for the LGBTQ community.</p>
     </div>
   </div>
 
 <br>
 
 <div class="img">
-    <img src="../assets/NationalMall.jpg" width="525" height="360"/>
-    <p class="quote" >The National Mall is a landscaped park within the National Mall and Memorial Parks.</p>
-    <p class="quote" >Added to the National Register of Historic Places in 1966, it is an official unit </p>
-    <p class="quote" >of the United States National Park System.</p>
+    <img src="../assets/NationalMall.jpg" width="700" height="auto"/>
+    <p class="quote" >The National Mall is a landscaped park within the National Mall and Memorial Parks. 
+      Added to the National Register of Historic Places in 1966, it is an official unit
+      of the United States National Park System.</p>
 </div>
 <br>
 
