--- a/Final Project/ClientApp/src/app/planningtips/planningtips.component.html
+++ b/Final Project/ClientApp/src/app/planningtips/planningtips.component.html
@@ -14,43 +14,50 @@
             <br>    
                 <h4 class="planningsubsection">Entrance Fees</h4>
                     <ul >
-                        <li class="tipslist">Most national parks (about 75%) are free.</li>
+                        <div *ngIf="checked=='true'">
+                            <li class="tipslist" ngChecked="class:chizecked"><input type="checkbox"> Most national parks (about 75%) are free.</li>
+                        </div> 
                         <br>
-                        <li class="tipslist">The rest charge a very reasonable entrance fee, which may even be good for the entire week. 
+
+                        <li class="tipslist"><input type="checkbox"> The rest charge a very reasonable entrance fee, which may even be good for the entire week. 
                             The latter averages at about $35 per vehicle.</li>
                     </ul>
-                    <br>
+                        <br>
                 <h4 class="planningsubsection">Foodstuff</h4>
                     <ul>
-                        <li class="tipslist"><input type="checkbox">The lack of restaurants and other ‘food infrastructure’ across National Parks is a blessing and a curse: 
+                        <li class="tipslist"><input type="checkbox"> The lack of restaurants and other ‘food infrastructure’ across National Parks is a blessing and a curse: 
                         It’s great not having to get pigeon-holed into tourist traps for sustenance; yet, you’ll have to step up your 
                         pre-planning that much more. </li>
                         <br>
-                        <li class="tipslist"><input type="checkbox">The Rocket Mortgage team recommends a couple dozen Clif bars and trail mix to start. 
+                        <li class="tipslist"><input type="checkbox"> The Rocket Mortgage team recommends a couple dozen Clif bars and trail mix to start. 
                         Read more about camp cooking <a href="https://www.nps.gov/subjects/camping/cooking-in-camp.htm">here</a>. 
                         You can likely get away with spending less than $100 for the entire week. </li>
                     </ul>
                     <br>
                 <h4 class="planningsubsection">Lodging</h4>
                     <ul >
-                        <li class="tipslist">A hotel can make a big dent in your budget. They are often located outside of parks, 
+                        <li class="tipslist"><input type="checkbox"> A hotel can make a big dent in your budget. They are often located outside of parks, 
                             which translates to longer drivetimes as well as additional gas costs.</li>
                         <br>
-                        <li class="tipslist">Even if you opt for a tent, you will still incur costs. Some sites at the Grand Canyon
+                        <li class="tipslist"><input type="checkbox"> Even if you opt for a tent, you will still incur costs. Some sites at the Grand Canyon
                             charge up to $60/night for a campspot. </li>
                         <br>
-                        <li class="tipslist">Another option is car-camping: Go all out and build a bed platform in the ol' Subaru!</li>
+                        <li class="tipslist"><input type="checkbox"> Another option is car-camping: Go all out and build a bed platform in the ol' Subaru!</li>
                     </ul>
                     <br>
                 <h4 class="planningsubsection">Backpackers Beware!</h4>
                     <ul >
-                        <li class="tipslist">As freeing as backpacking can be, it’s not always cheap. Just visit your local REI or Moosejaw 
-                            store and you’ll know what we mean. Simply outfitting yourself with a  lightweight gear (and by 
+                        <li class="tipslist"><input type="checkbox"> As freeing as backpacking can be, it’s not always cheap. Just visit your local REI or Moosejaw 
+                            store and you’ll know what we mean.</li>
+                            <br>
+                        <li class="tipslist"><input type="checkbox"> Simply outfitting yourself with a  lightweight gear (and by 
                             mile 10 you’ll realize the value-add of lightweight gear) like a backpack, sleeping bag and tent, 
-                            you will likely end up spending over $500. Add to that a suite of protective clothing items,
+                            you will likely end up spending over $500. </li>
+                            <br>
+                        <li class="tipslist"><input type="checkbox"> Add to that a suite of protective clothing items,
                             cooking infrastructure, and other navigation accessories, you may be lucky to keep it under $1,500. </li>
                         <br>
-                        <li class="tipslist">...but you may end up keeping and reusing this gear for decades. </li>
+                        <li class="tipslist"><input type="checkbox"> ...but you may end up keeping and reusing this gear for decades. </li>
                     </ul>
         </details>
         
@@ -60,9 +67,9 @@
             </summary>
                 <br>
                     <ul >
-                    <li class="tipslist">Bring water and good boots.</li>
+                    <li class="tipslist"><input type="checkbox"> Bring water and good boots.</li>
                     <br>
-                    <li class="tipslist">Everything else is optional.</li>
+                    <li class="tipslist"><input type="checkbox"> Everything else is optional.</li>
                     </ul>
                 <br>
             <div class="img">
@@ -78,12 +85,12 @@
                 <h3 class="sectionheadingfit">3. Plan the Drive.</h3>
             </summary>
                 <ul class="tipslist">
-                    <li>Even within the same park, scenic destinations can be hours apart.</li>
+                    <li><input type="checkbox"> Even within the same park, scenic destinations can be hours apart.</li>
                     <br>
-                    <li>Unless you’ve got the Dutch biking gene and an unparalleled grit 
+                    <li><input type="checkbox"> Unless you’ve got the Dutch biking gene and an unparalleled grit 
                     to navigate rugged rural infrastructure, plan to arrive in a motorized vehicle. </li>
                     <br>
-                    <li>GoogleMaps or MyMaps (also a Google product) are great tools to plan trips with stops.
+                    <li><input type="checkbox"> GoogleMaps or MyMaps (also a Google product) are great tools to plan trips with stops.
                         Click <a href="https://www.google.com/maps/about/mymaps/">here</a> for more details. </li>
                 </ul>
             <div class="img">
@@ -98,22 +105,22 @@
                 <h3 class="sectionheadingfit">4. Stay on the Trail!</h3>
             </summary>
             <br>
-            <h4 class="planningsubsection">Ummm, ever heard of 'Death Valley?'</h4>   
+            <h4 class="planningsubsection">Ever heard of 'Death Valley?'</h4>   
             <br>
                 <ul >
-                    <li class="tipslist">Imagine having the guile to stray from the given path when you don't know a peak from a pike. 
+                    <li class="tipslist"><input type="checkbox"> 
                         The national parks have thousands of miles of marked hiking trails. Tip: Follow them. </li>
                     <br>
                 </ul>
             <h4 class="planningsubsection">The idea of ‘Stay on the Trail’ applies to the realms of safety and preservation: </h4> 
                 <br>
                     <ul>
-                        <li class="tipslist"><strong>Leave No Trace – </strong>more important than removing a stray rock or two, do not leave any trash or litter behind.</li>
+                        <li class="tipslist"><input type="checkbox"> <strong> Leave No Trace – </strong>more important than removing a stray rock or two, do not leave any trash or litter behind.</li>
                             <br>
-                        <li class="tipslist"><strong>Don’t Feed Wildlife – </strong>feeding wild animals isn’t a good idea and is prohibited in national parks. It can also 
+                        <li class="tipslist"><input type="checkbox"> <strong> Don’t Feed Wildlife – </strong>feeding wild animals isn’t a good idea and is prohibited in national parks. It can also 
                                 make wild animals lose their natural fear of people, compromising the safety of both the animal and humans.</li>
                                 <br>
-                        <li class="tipslist"><strong>No Smoking – </strong>though you might find space enough to prevent creating second-hand smoke, 
+                        <li class="tipslist"><input type="checkbox"> <strong> No Smoking – </strong>though you might find space enough to prevent creating second-hand smoke, 
                                 smoking is a fire hazard that is all too preventable. Not a good look given the past couple years of bad wildfires, 
                                 many of which have sadly been caused by humans.</li>
                     </ul>
@@ -121,7 +128,7 @@
             <h4 class="planningsubsection">Additional Legal Resources</h4> 
             <br>
                 <ul>
-                <li class="tipslist">A more detailed list of the, policies and regulations for the National Park Service can be found 
+                <li class="tipslist"><input type="checkbox"> A more detailed list of the, policies and regulations for the National Park Service can be found 
                     <a href="https://www.nps.gov/aboutus/lawsandpolicies.htm">here</a>.</li>
                 <br>
                 </ul>
